# ChangeLog for sys-libs/timezone-data
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.172 2009/03/20 16:19:35 armin76 Exp $

  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009b.ebuild:
  arm/ia64/m68k/s390/sh/sparc/x86 stable wrt #262620

  18 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
  timezone-data-2009b.ebuild:
  Stable on alpha, bug #262620

  18 Mar 2009; Jeroen Roovers <jer@gentoo.org> timezone-data-2009b.ebuild:
  Stable for HPPA (bug #262620).

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> timezone-data-2009b.ebuild:
  Marked ppc/ppc64 stable for bug #262620.

*timezone-data-2009c (16 Mar 2009)

  16 Mar 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009c.ebuild:
  Version bump #262665 by Rodrigo Severo.

  16 Mar 2009; Thomas Anderson <gentoofan23@gentoo.org>
  timezone-data-2009b.ebuild:
  stable amd64, bug 262620

  15 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  timezone-data-2009b.ebuild:
  Block outdated versions of glibc #258802 by crox.

*timezone-data-2009b (09 Feb 2009)

  09 Feb 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009b.ebuild:
  Version bump #258339 by Rodrigo Severo.

*timezone-data-2009a (21 Jan 2009)

  21 Jan 2009; Mike Frysinger <vapier@gentoo.org>
  +timezone-data-2009a.ebuild:
  Version bump #255757 by Rodrigo Severo.

  14 Dec 2008; Thomas Anderson <gentoofan23@gentoo.org>
  timezone-data-2008i.ebuild:
  stable amd64, bug 250241

  14 Dec 2008; nixnut <nixnut@gentoo.org> timezone-data-2008i.ebuild:
  Stable on ppc wrt bug 250241

  09 Dec 2008; Jeroen Roovers <jer@gentoo.org> timezone-data-2008i.ebuild:
  Stable for HPPA (bug #250241).

  08 Dec 2008; Brent Baude <ranger@gentoo.org> timezone-data-2008i.ebuild:
  stable ppc64, bug 250241

  08 Dec 2008; Raúl Porcel <armin76@gentoo.org> timezone-data-2008i.ebuild:
  alpha/arm/ia64/sparc/x86 stable wrt #250241
