@@ -1,14 +1,11 @@
 AUX timezone-data-2008h-makefile.patch 4037 RMD160 b7b9926ccee050dd18f2c33f2654a0b6dc4d35e0 SHA1 281539ae7f6fd804fc1e7ec9533552fa7fd50d88 SHA256 fc496b869ed6b70c60b0fcdea0a176e31c9405c96e6bf73b5edc26339de66c39
-DIST tzcode2008h.tar.gz 189691 RMD160 5b5f131a8d7d7915ab53fdf96cc5cd30b447d8d7 SHA1 33c470314fd9c8ff54dd9adb98fba2303f3a58d7 SHA256 e9c54cf4ede59cb00c925b004a112fa0fcd9feae62020ba48abe719d9d69d2b3
-DIST tzcode2009a.tar.gz 189899 RMD160 9bcbf3cc02148a1facac1e4b787d1f806c4c0d3e SHA1 dbdc8c4b5c869f6f013094113ee48227cad3367f SHA256 ead8d62a4b008078731bab34c149003eed23d1c47d43e35e19742b8fa4241f9b
 DIST tzcode2009b.tar.gz 190156 RMD160 633df8c0e350d68b15d55cfb54131be55133bdfc SHA1 53e62aef41066bb9b55b36451f7df61a0ed29c59 SHA256 4117dbd3864616e8391e79fffe2b4da999f7251763bc77a7b7006df57220400c
-DIST tzdata2008i.tar.gz 174009 RMD160 20832618435f95fe4e8cf9fbff7b73cc83f84d82 SHA1 32a3e9a22caec2c702a7214939267163fac53f04 SHA256 ec8824897cc79308b4ec6946a049d4680539e8de9c764b592bcf126f9060d7af
-DIST tzdata2009a.tar.gz 174994 RMD160 606563d18e6d6623095ee94e0d6ef27ca3bbedfd SHA1 8ace9a1c42581c3af8c4c84cd044683eaef191ef SHA256 c704d5a99f4e995b68e0463f206aad38dbddea7e9338d0ccc0abca901dd40100
+DIST tzcode2009d.tar.gz 190134 RMD160 26db83e9306354ffadf5a1606696b73587b47c7f SHA1 b935ac44d2df7c7bb2abb8d5aeb622dcc23b263b SHA256 3e914ff7d4593030531dd5b73ca5a71d7c0f5d52cb6096f7d6b1d5f720c4bee0
 DIST tzdata2009b.tar.gz 174900 RMD160 ef25a51ac85688bd41bb39a63f4ca5199b975d66 SHA1 9521db73a56edba6bba706c6d30a9296e71f5cb6 SHA256 f2c4e8f816a1e15c46ec78e23fcbe18d559e925cc2c99799243e5a749b2a8c68
 DIST tzdata2009c.tar.gz 175126 RMD160 8308bd319589efd79159358b35a105c721f80c05 SHA1 5d576004df3b3ebebfba9f5839f2dacd3361433f SHA256 3dd1bd0014e7c9a74cab9a21fd32c9cadd30b2c69340f32a685e7b52207c1db8
-EBUILD timezone-data-2008i.ebuild 2956 RMD160 042eeb3371bf7ff05fd4989379d3a01a170cc44b SHA1 92caafac19a1bfc106aee99d3382b83803adfe8f SHA256 fb10c39c1d62067cad955a3be0cf7c04519284ce0e167022061dad0299447806
-EBUILD timezone-data-2009a.ebuild 2953 RMD160 806daa3fdc2ec7d6dd79f3d974fe150f840c5a91 SHA1 58fe4aa2b1d3a3183eb39fa281b592d2f2f9f54b SHA256 363cd15b37a4646c78ae1b391d28ca4b7c61a084752311068821e1fcf62416fd
+DIST tzdata2009d.tar.gz 176911 RMD160 af183cbeeefdb7eeac0b0f5feb3be81bc897d2f3 SHA1 fdb23d045f0a9458c9e8b9b8e53e7e04a82d6627 SHA256 f884ff8af90824cac55786e4b3a6048af10702a5f15036bf55f33d74704ad102
 EBUILD timezone-data-2009b.ebuild 2977 RMD160 f36fc3ddce99b375a9bc610a5df869f45e581677 SHA1 c5a83a03d527e6a216bbdeec74af08100518ca1e SHA256 f889db48a5878f54a83b586ba8bd4d53fe5da8a6033dc6b78c2ff71532ec8990
 EBUILD timezone-data-2009c.ebuild 2980 RMD160 a36891402e53c2ce0cdb21a0b95f0fa283a8edbd SHA1 9611b274495cc4dc506ad594985d36a154f2ae9e SHA256 2a805264125c4943c2142e318b19fdd0cb415d10623b3ce19e3f2b387c97e81e
-MISC ChangeLog 21577 RMD160 fc81dae687ce0e6c1ed35af8160488f550e0c615 SHA1 727db91afa4ba557cfb2187abdcd0b54c78a6367 SHA256 dca3440bcecef5eb9e89d55ac707af5a8a0bb3b16e36dd9ca09d25f90a23e4b9
+EBUILD timezone-data-2009d.ebuild 2976 RMD160 fc21deb690ae357d740a4466274c78a62d234574 SHA1 9b9ad191f23c5af44d6a2c4dc2509f3257b62174 SHA256 8bfd43b8f47a11184cf63984e00f04ef6096bbc1cbede3574729f1f61df09e5a
+MISC ChangeLog 21736 RMD160 1b59ae4a94a60587e480e4be4193f8c1fa7f64e3 SHA1 86567cbdd5c36628a0846ae831824d7f609b998a SHA256 32930bacfda9cf8b978f9d8250678d220a8816c19ed2ec988b56ccd85e27e5e9
 MISC metadata.xml 162 RMD160 d002486a43522f2116b1d9d59828c484956d66e2 SHA1 d6b4923897f6ae673b4f93646f5b4ba61d5a2c3c SHA256 65a915d44de1f01d4b7f72d313b4192c38374a9835d24988c00c1e73dca5805a
