@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2009a.ebuild,v 1.1 2009/01/21 16:37:32 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/timezone-data-2009d.ebuild,v 1.1 2009/03/23 18:50:15 vapier Exp $
 
 EAPI="prefix"
 
@@ -20,7 +20,7 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux"
 IUSE="nls elibc_FreeBSD elibc_glibc"
 
-DEPEND=""
+RDEPEND="!<sys-libs/glibc-2.3.5"
 
 S=${WORKDIR}
 
