@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/timezone-data
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.172 2009/03/20 16:19:35 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/timezone-data/ChangeLog,v 1.173 2009/03/23 18:50:15 vapier Exp $
+
+*timezone-data-2009d (23 Mar 2009)
+
+  23 Mar 2009; Mike Frysinger <vapier@gentoo.org>
+  +timezone-data-2009d.ebuild:
+  Version bump #263488 by Rodrigo Severo.
 
   20 Mar 2009; Raúl Porcel <armin76@gentoo.org> timezone-data-2009b.ebuild:
   arm/ia64/m68k/s390/sh/sparc/x86 stable wrt #262620
